--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.11.0",
     "@mantine/core": "^6.0.13",
+    "@mantine/dates": "^6.0.15",
     "@mantine/hooks": "^6.0.13",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
